--- a/index.html
+++ b/index.html
@@ -1,1 +1,36 @@
-<h1>Hello, world!</h1>
+<!doctype html>
+<html lang="ja">
+    <head>
+        <meta charset="utf-8">
+        <meta name="robots" content="noindex">
+        <meta name="viewport" content="width=device-width">
+        <link rel="icon" href="./img/shinobu.ico">
+        <title>Home</title>
+    </head>
+    <body>
+        <div class="top">
+            <div>Security System: 61kun</div>
+            <div>Index: Home</div>
+        </div>
+        <br>
+        <div class="content">
+            <div>Luaスクリプト向けのセキュリティサービスです。</div>
+            <div>一般的な暗号化や難読化の代わりとして利用することができます。</div>
+            <div>また、解読者の検知やアクセス集計なども自動で行ってくれます。</div>
+        </div>
+        <br>
+        <div class="Advertisement">
+            <div>価格は 1,000円/1file</div>
+            <div>詳細は<a href="https://discord.gg/KjZ54PPvH3" target="_blank">Discordサーバー</a>でご確認ください。</div>
+        </div>
+    </body>
+</html>
+<style>
+    * {
+        color: white;
+    }
+    html {
+        padding-inline: 10px;
+        background: black;
+    }
+</style>
