--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <div>また、解読者の検知やアクセス集計なども自動で行ってくれます。</div>
         </div>
         <br>
-        <div class="Advertisement">
+        <div class="purchase">
             <div>価格は 1,000円/1file</div>
             <div>詳細は<a href="https://discord.gg/KjZ54PPvH3" target="_blank">Discordサーバー</a>でご確認ください。</div>
         </div>
