--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta name="robots" content="noindex">
         <meta name="viewport" content="width=device-width">
-        <link rel="icon" href="./img/shinobu.ico">
+        <link rel="icon" href="./img/">
         <title>Home</title>
     </head>
     <body>
